<resources>
    <string name="app_name">TodoApp</string>
    <string name="app_logo">App Logo</string>
    <string name="add_task">Task add fab button</string>
    <string name="title">Title</string>
    <string name="start_typing">Start typing…</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="hide_completed">Hide completed</string>
    <string name="delete_all_completed">Delete all completed</string>
    <string name="fav_note">fav_note</string>
    <string name="no_data_found">No note found \n press \'+\' to add note.</string>
    <string name="important_note">Important Note</string>
</resources>
